[package]
name = "xtransfer_ink"
version = "0.1.0"
authors = ["Wenfeng Wang <kalot.wang@gmail.com>"]
edition = "2021"

[dependencies]
ink_prelude = { version = "3.3.1", default-features = false }
ink_primitives = { version = "3.3.1", default-features = false }
ink_storage = { version = "3.3.1", default-features = false }
ink_metadata = { version = "3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3.1", default-features = false }
ink_lang = { version = "3.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
pink-extension = { version = "0.1", default-features = false, features = ["ink-as-dependency"] }

openbrush = { path = "./vendor/openbrush-contracts", version = "~2.1.0", default-features = false }
environmental = { path = "./utils/environmental", default-features = false, optional = true }

[lib]
name = "xtransfer_ink"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
]
ink-as-dependency = []
mockable = [
    "environmental",
    "openbrush/mockable",
]